navbar fixed; projects-section mobil spacing

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -47,7 +47,6 @@ a:focus,
 }
 
 .projects-header,
-.projects-paragraph,
 .cv-header,
 .skills-header {
   margin-left: 50px;
@@ -64,6 +63,12 @@ a:focus,
 }
 
 /* Header */
+nav {
+  position: fixed;
+  width: 100%;
+  background-color: var(--white);
+  z-index: 1;
+}
 .navbar-list {
   display: flex;
   justify-content: space-evenly;
@@ -76,6 +81,7 @@ a:focus,
   display: grid;
   background-color: var(--orange);
   gap: 20px;
+  padding-top: 100px;
 }
 
 .introduction-container {
@@ -135,6 +141,10 @@ a:focus,
   margin: 50px;
 }
 
+.projects-paragraph {
+  margin-left: 50px;
+}
+
 .projects-container {
   display: flex;
   flex-wrap: wrap;
@@ -145,6 +155,8 @@ a:focus,
 .project-container {
   padding: 20px;
   box-shadow: 0 0 10px var(--black);
+  min-width: 45%;
+  max-width: 450px;
 }
 .project-container:hover,
 .project-container:active {
@@ -158,7 +170,7 @@ a:focus,
 }
 
 .project-container > img {
-  width: 600px;
+  width: 100%;
   height: auto;
 }
 
@@ -309,6 +321,10 @@ footer {
 @media (max-width: 1200px) {
   .profile-picture-container {
     margin-right: 0;
+  }
+
+  .project-container {
+    min-width: 60%;
   }
 }
 
